Added colors to _colors config file and textto _fonts config file

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -14,3 +14,50 @@ $headers-font: "Raleway", "Helvetica", "sans-serif";
 //        font-url('FontFile.ttf') format('truetype')
 // }
 // $my-font: "Font Name";
+
+h1 {
+  font-size: 100px !important;
+  font-family: Montserrat;
+  font-style: bold;
+}
+
+
+// WORK WITH TA TO REFACTOR
+// LOGO LARGER
+
+
+// LOGO SMALL (NAVBAR)
+h2 {
+  font-size: 32px;
+  font-family: Montserrat;
+  font-style: bold;
+}
+
+// Sub-Header Bold
+h3 {
+  font-size: 24px;
+  font-family: Montserrat;
+  font-style: bold;
+}
+
+// Category Headers Regular
+category {
+  font-size: 24px;
+  font-family: Montserrat;
+}
+
+
+h4 {
+  font-size: 18px;
+  font-family: Montserrat;
+}
+
+h5 {
+  font-size: 18px;
+  font-family: Montserrat;
+}
+
+//
+p {
+  font-size: 16px;
+}
