--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,20 +1,38 @@
 .avatar {
   width: 40px;
   border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: #132D7E 1px solid;
+  // avatar blue, need to set status to community
 }
 .avatar-large {
-  width: 56px;
+  width: 103px;
+  height: 100px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border-radius: 50%;
 }
 .avatar-bordered {
   width: 40px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  border: #EC5A73 1px solid;
+  // avatar pink, need to set status to match
 }
-.avatar-square {
-  width: 40px;
-  border-radius: 0px;
+
+.avatar-small {
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
 }
+
+// .avatar-xxs {
+  // width: 20px;
+  // height: 20px;
+  // border-radius: 50px;
+  // background-color: #EC5A73;
+  // box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  // border: #EC5A73 1px solid;
+// Finish this part with photo uploader
+
+
