--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -1,6 +1,11 @@
-<h1>HiVie</h1>
+<div>
+  <h1>HiVie</h1>
 
-<h2>HiVie</h2>
+  <h2>HiVie</h2>
 
-<h3>It's not about if you live it's about how you live</h3>
+  <h3>It's not about if you live it's about how you live</h3>
 
+  <h4>Testing</h4>
+
+  <p>tesing testing</p>
+</div>
