--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,22 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :first_name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "email" }%>
+    <%= f.input :last_name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "email" }%>
+    <%= f.input :city,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "email" }%>
+    <%= f.input :username,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "email" }%>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -15,11 +31,20 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :gender,
+                required: true,
+                autofocus: true,
+                collection: ["Male", "Female", "Non-binary"]%>
+    <%= f.input :birthday,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "email" }%>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+  <div class="form-actions mt-5">
+    <%= f.button :submit, "Next step!", class: 'btn btn-pink' %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<!-- deleted the ugly 'log in' blue link that comes with devise -->
+
