--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -1,4 +1,7 @@
 
-<h4 class="pill" id="pill-ghost">Golf</h4>
-<h4 class="pill" id="pill-select">Golf</h4>
+<h4 class="pill btn" id="pill-ghost">Golf</h4>
+<h4 class="pill btn" id="pill-select">Golf</h4>
+<h4 class="pill btn" id="pill-select">Surfing</h4>
+<h4 class="pill btn" id="pill-select">Surfing</h4>
+<h4 class="pill btn" id="pill-select">Swimming</h4>
 
