--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,8 @@
-.navbar-lewagon {
-  justify-content: space-between;
+.navbar {
   background: white;
+  padding: 1.5rem 1rem;
+  border-bottom: 1px ;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
-}
