changed pill class to .btn-pill

--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -1,10 +1,10 @@
 
 
-<h4 class="pill btn" id="pill-ghost">Golf</h4>
-<h4 class="pill btn" id="pill-select">Golf</h4>
-<h4 class="pill btn" id="pill-select">Surfing</h4>
-<h4 class="pill btn" id="pill-select">Surfing</h4>
-<h4 class="pill btn" id="pill-select">Swimming</h4>
+<h4 class="btn btn-pill" id="pill-ghost">Golf</h4>
+<h4 class="btn btn-pill" id="pill-ghost">Golf</h4>
+<h4 class="btn btn-pill" id="pill-select">Surfing</h4>
+<h4 class="btn btn-pill" id="pill-select">Surfing</h4>
+<h4 class="btn btn-pill" id="pill-select">Swimming</h4>
 
 <a href="#" class="btn btn-pink">Register</a>
 <a href="#" class="btn btn-transparent">Login</a>
