changed the names of the buttons' classes

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -42,7 +42,7 @@
   </div>
 
   <div class="form-actions mt-5">
-    <%= f.button :submit, "Next step!", class: 'btn btn-pink' %>
+    <%= f.button :submit, "Next step!", class: 'button btn-pink' %>
   </div>
 <% end %>
 
