--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -16,3 +16,16 @@
 .mr-1, .mx-1 {
     margin-right: 0rem !important;
 }
+
+// LOGIN PAGE
+.form-login {
+  background: white;
+  padding: 10px 20px;
+  margin-top: 50px;
+  border-radius: 3px;
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+  .btn {
+    width: 100%;
+    margin-bottom: 20px
+  }
+}
