--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
-<div class=" navbar-expand-sm navbar-light navbar">
-  <div class="border-bottom"></div>
+<div class=" navbar-expand-sm navbar-light navbar justify-content-center">
     <div class="d-flex align-items-center">
+      <h2>HiVie</h2>
     </div>
   </div>
 </div>
