--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,49 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="home-container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+    <h2>Update Account Info <%= resource_name.to_s.humanize %></h2>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.error_notification %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+    <div class="form-inputs">
+      <%= f.input :photo %>
+      <%= f.input :photo_cache, as: :hidden %>
+      <%= f.input :email, required: true, autofocus: true %>
+      <%= f.input :first_name, required: true, autofocus: true, input_html: { autocomplete: "first_name" }%>
+      <%= f.input :last_name, required: true, autofocus: true, input_html: { autocomplete: "last_name" }%>
+      <%= f.input :city, required: true, autofocus: true, input_html: { autocomplete: "city" }%>
+      <%= f.input :username, required: true, autofocus: true, input_html: { autocomplete: "email" }%>
+      <%= f.input :gender, required: true, autofocus: true, collection: ["Male", "Female", "Non-binary"]%>
+      <%= f.input :birthday, required: true, autofocus: true, input_html: { autocomplete: "birthday" }%>
+
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
+
+      <%= f.input :password,
+      hint: "leave it blank if you don't want to change it",
+      required: false,
+      input_html: { autocomplete: "new-password" } %>
+      <%= f.input :password_confirmation,
+      required: false,
+      input_html: { autocomplete: "new-password" } %>
+      <%= f.input :current_password,
+      hint: "we need your current password to confirm your changes",
+      required: true,
+      input_html: { autocomplete: "current-password" } %>
+    </div>
+
+    <div class="form-actions">
+      <h5><%= f.button :submit, "Update Account", class: 'btn btn-transparent'%><h5>
+    </div>
     <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+    <h5>Unhappy? <%= link_to "Cancel My Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></h5>
+
+    <h5><%= link_to "Back", :back %><h5>
+
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
