--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,52 +1,57 @@
-<h2>Sign up</h2>
+<div class="home-container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+      <h2>Create Account</h2>
 
-  <div class="form-inputs">
-    <%= f.input :photo %>
-    <%= f.input :photo_cache, as: :hidden %>
-    <%= f.input :first_name,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :last_name,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :city,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :username,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :gender,
-                required: true,
-                autofocus: true,
-                collection: ["Male", "Female", "Non-binary"]%>
-    <%= f.input :birthday,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+
+      <div class="form-inputs">
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>
+        <%= f.input :first_name,
+        required: true,
+        autofocus: true,
+        input_html: { autocomplete: "email" }%>
+        <%= f.input :last_name,
+        required: true,
+        autofocus: true,
+        input_html: { autocomplete: "email" }%>
+        <%= f.input :city,
+        required: true,
+        autofocus: true,
+        input_html: { autocomplete: "email" }%>
+        <%= f.input :username,
+        required: true,
+        autofocus: true,
+        input_html: { autocomplete: "email" }%>
+        <%= f.input :email,
+        required: true,
+        autofocus: true,
+        input_html: { autocomplete: "email" }%>
+        <%= f.input :password,
+        required: true,
+        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+        input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+        required: true,
+        input_html: { autocomplete: "new-password" } %>
+        <%= f.input :gender,
+        required: true,
+        autofocus: true,
+        collection: ["Male", "Female", "Non-binary"]%>
+        <%= f.input :birthday,
+        required: true,
+        autofocus: true,
+        input_html: { autocomplete: "email" }%>
+      </div>
+
+      <div class="form-actions mt-5">
+        <%= f.button :submit, "Next step!", class: 'button btn-pink' %>
+      </div>
+      <% end %>
+
+    </div>
   </div>
-
-  <div class="form-actions mt-5">
-    <%= f.button :submit, "Next step!", class: 'button btn-pink' %>
-  </div>
-<% end %>
-
-<!-- deleted the ugly 'log in' blue link that comes with devise -->
-
+</div>
