Updated Autocomplete field in New Registration View

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,19 +13,19 @@
         <%= f.input :first_name,
         required: true,
         autofocus: true,
-        input_html: { autocomplete: "email" }%>
+        input_html: { autocomplete: "first_name" }%>
         <%= f.input :last_name,
         required: true,
         autofocus: true,
-        input_html: { autocomplete: "email" }%>
+        input_html: { autocomplete: "last_name" }%>
         <%= f.input :city,
         required: true,
         autofocus: true,
-        input_html: { autocomplete: "email" }%>
+        input_html: { autocomplete: "city" }%>
         <%= f.input :username,
         required: true,
         autofocus: true,
-        input_html: { autocomplete: "email" }%>
+        input_html: { autocomplete: "username" }%>
         <%= f.input :email,
         required: true,
         autofocus: true,
