--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,8 +1,15 @@
 .navbar {
   background: white;
-  padding: 1.5rem 1rem;
+  padding: 0.75rem 1rem;
   border-bottom: 1px ;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-
 }
 
+.navbar-hivie {
+  justify-content: space-between;
+  background: white;
+}
+
+.navbar-hivie .navbar-collapse {
+  flex-grow: 0;
+}
