--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
+    <% unless current_page?(root_path) %>
+      <%= render 'shared/navbar' %>
+      <%= render 'shared/flashes' %>
+    <% else %>
+      <%= render 'shared/navbar' %>
+    <% end %>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
     <%= yield %>
@@ -17,3 +23,9 @@
     <%= javascript_pack_tag 'application' %>
   </body>
 </html>
+
+
+<%# if !current_page?(url_for(:controller => 'sessions', :action => '')) %>
+  <%#= render 'shared/navbar' %>
+  <%#= render 'shared/flashes' %>
+<%# end %>
