working on form

--- a/app/views/user_characteristics/new.html.erb
+++ b/app/views/user_characteristics/new.html.erb
@@ -1,27 +1,31 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+<div class="form-group">
+   <label class="control-label check_boxes optional">Categories</label>
 
-  <!-- <div class="form-inputs"> -->
-      <%#= simple_form_for (resources :user_characteristics, url: new_user_characteristic(user_characteristics)) do |f| %>
-        <%#= f.association :category, as: :check_boxes %>
-        <%#= f.input :name %>
-      <%# end %>
-    </div>
-
-    <div class="form-inputs check_boxes optional user_characteristics">
-      <label class="control-label check_boxes optional">Categories</label>
-
-      <input type="hidden" name="input">
-    </div>
+  <input type="hidden" name="post[characteristic_id][]" value="">
 
 
+  <%= simple_form_for(@user_characteristic) do |t| %>
+    <% Characteristic.all.each do |characteristic| %>
+      <span class="checkbox">
+        <label for="post_characteristic_id <%= characteristic %>">
+          <input class="check_boxes optional" type="checkbox" value="<%= characteristic %>"
+          name="post[characteristic_id][]" id="post_characteristic_id <%= characteristic %>">
+          <%= characteristic.name %>
+          <%= characteristic.category %>
+        <i class="fa fa-check"></i>
+        </label>
+      </span>
+    <% end %>
 
-    </div>
-  </div>
+
+    <%= t.association :characteristic, as: :check_boxes %>
+    <%= t.submit "Almost there" %>
+  <% end %>
 </div>
 
 
-<%= simple_form_for([current_user, @user_characteristics ]) do |f| %>
-  <%#= f.collection_select(:title, Category.all, :title, :title) %>
-<% end %>
+
+
+
+<div>we are working</div>
+
