Minor updates to Navbar for Chat view. Need chat show pages created before furhter action

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,3 +13,10 @@
 .navbar-hivie .navbar-collapse {
   flex-grow: 0;
 }
+
+// .navbar .navbar-brand {
+//   display: inline-block;
+//   text-align:center;
+//   float: none;
+//   vertical-align: top;
+// }
