--- a/app/views/shared/_chat_navbar.html.erb
+++ b/app/views/shared/_chat_navbar.html.erb
@@ -1,5 +1,5 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-hivie">
-  <%= link_to "#", class: "navbar-brand" do %>
+<div class="navbar navbar-expand-sm navbar-light navbar-hivie navbar-inverse">
+  <%= link_to "#", class: "navbar-brand container-fluid" do %>
     <h2>HiVie</h2>
     <% end %>
 
@@ -36,3 +36,9 @@
       <% end %>
   </div>
 </div>
+
+<!-- <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="navbar-header"> -->
