--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -10,7 +10,8 @@
       <div class="form-inputs">
         <%= f.input :diagnosis_year, placeholder: '2008', input_html: { min: '1950', step: 'any', max: 'Date.today.year' } %>
         <%= f.input :sex_pref, required: true, autofocus: true, collection: ["Male", "Female", "Non-binary"]%>
-        <%= f.input :age_pref, collection: 18..90%>
+        <%= f.input :min_age, collection: 18..90%>
+        <%= f.input :max_age, collection: 19..90%>
         <%= f.input :distance, collection: 1..100, as: :range%>
       </div>
 
