--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -4,7 +4,7 @@
 
     <h2>Update <%= @user.first_name %>s' Preferences</h2>
 
-    <%= simple_form_for(@user) do |f| %>
+    <%= simple_form_for(:profiles, url: { action: "update"}, method: :patch ) do |f| %>
     <%= f.error_notification %>
 
       <div class="form-inputs">
