Created Distance Slider with Label & Saves to User Profile

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-<%= link_to "Go to swiper", user_path(@user), class: "btn btn primary"  %>
+<%#= link_to "Go to swiper", user_path(@user), class: "btn btn primary"  %>
