--- a/app/assets/stylesheets/components/_pill.scss
+++ b/app/assets/stylesheets/components/_pill.scss
@@ -4,6 +4,11 @@
   border-radius: 27px;
   min-width: 60px;
   max-width: 150px;
+
+  &.active{
+    background-color: #132D7E;
+    color: white;
+  }
 }
 
 #pill-ghost {
