--- a/app/views/user_characteristics/new.html.erb
+++ b/app/views/user_characteristics/new.html.erb
@@ -1,31 +1,38 @@
-<div class="form-group">
-   <label class="control-label check_boxes optional">Categories</label>
+<div class="accordion" id="accordionExample">
+  <% UserCharacteristic::CATEGORIES.each_with_index do |category, index| %>
+    <div class="card">
+      <div class="card-header" id="heading<%= index %>">
+        <h2 class="mb-0">
+          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-<%= index %>" aria-expanded="false" aria-controls="collapse-<%= index %>">
+            <%= category %>
+          </button>
+        </h2>
+      </div>
 
-  <input type="hidden" name="post[characteristic_id][]" value="">
+      <div id="collapse-<%= index %>" class="collapse" aria-labelledby="heading-<%= index %>" data-parent="#accordionExample">
+        <div class="card-body">
+          <% Characteristic.where(category: category).each do |characteristic| %>
+            <span id="characteristic-<%= characteristic.id %>">
+              <% if current_user.characteristics.include?(characteristic) %>
+                <% user_characteristic = current_user.user_characteristics.where(characteristic_id: characteristic.id).first %>
 
-
-  <%= simple_form_for(@user_characteristic) do |t| %>
-    <% Characteristic.all.each do |characteristic| %>
-      <span class="checkbox">
-        <label for="post_characteristic_id <%= characteristic %>">
-          <input class="check_boxes optional" type="checkbox" value="<%= characteristic %>"
-          name="post[characteristic_id][]" id="post_characteristic_id <%= characteristic %>">
-          <%= characteristic.name %>
-          <%= characteristic.category %>
-        <i class="fa fa-check"></i>
-        </label>
-      </span>
-    <% end %>
-
-
-    <%= t.association :characteristic, as: :check_boxes %>
-    <%= t.submit "Almost there" %>
+                <%= link_to characteristic.name, user_characteristic_path(user_characteristic), class: 'btn btn-pill active', method: :delete, remote: true %>
+              <% else %>
+                <%= link_to characteristic.name, user_characteristics_path({ characteristic_id: characteristic.id }), method: :post, class: 'btn btn-pill', remote: true %>
+              <% end %>
+            </span>
+          <% end %>
+        </div>
+      </div>
+    </div>
   <% end %>
+  <input type="text">
+  <button>Almost there...</button>
 </div>
 
 
 
 
 
-<div>we are working</div>
+
 
