--- a/app/views/shared/_chat_navbar.html.erb
+++ b/app/views/shared/_chat_navbar.html.erb
@@ -1,38 +1,37 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-hivie">
-  <%= link_to "#", class: "navbar-brand" do %>
+<!-- <div class="navbar navbar-expand-sm navbar-light navbar-hivie">
+  <%#= link_to "#", class: "navbar-brand" do %>
     <h2>HiVie</h2>
-    <% end %>
+    <%# end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-
-      <% if user_signed_in? %>
+      <%# if user_signed_in? %>
       <ul class="nav">
 
       </ul>
         <li class="nav-item">
-          <%= link_to "Match", "#", class: "nav-link" %>
+          <%#= link_to "Match", "#", class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Messages", "#", class: "nav-link" %>
+          <%#= link_to "Messages", "#", class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%#= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Edit Account", edit_user_registration_path, class: "dropdown-item" %>
-            <%= link_to "Update Preferences", "#", class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            <%#= link_to "Edit Account", edit_user_registration_path, class: "dropdown-item" %>
+            <%#= link_to "Update Preferences", "#", class: "dropdown-item" %>
+            <%#= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
-      <% else %>
+      <%# else %>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+              <%#= link_to "Login", new_user_session_path, class: "nav-link" %>
           </li>
         </ul>
-      <% end %>
+      <%# end %>
   </div>
-</div>
+</div> -->
