Finishing the user characteristics page

--- a/app/views/user_characteristics/new.html.erb
+++ b/app/views/user_characteristics/new.html.erb
@@ -26,10 +26,9 @@
       </div>
     </div>
   <% end %>
-  <input type="text">
-  <button>Almost there...</button>
 </div>
 
+<button class=" button btn-pink">Almost there...</button>
 
 
 
