--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-<% if user_signed_in? %>
-<%= link_to "Go to swiper", user_path(@user), class: "btn btn primary"  %>
+<% if user_signed_in? && @user.present? %>
+  <%= link_to "Go to swiper", user_path(@user), class: "btn btn primary"  %>
 <% end %>
