Adding button and describe ypurself input field

--- a/app/views/user_characteristics/new.js.erb
+++ b/app/views/user_characteristics/new.js.erb
@@ -12,3 +12,4 @@ if (link.classList.contains("active")) {
   link.dataset.method = "delete"
   link.href = "/user_characteristics/" + userCharacteristicId
 }
+// rendering the characteristics on browser side async.
