--- a/app/views/user_characteristics/new.html.erb
+++ b/app/views/user_characteristics/new.html.erb
@@ -1,9 +1,12 @@
+<!-- accordion with pills and chategorys -->
 <div class="accordion" id="accordionExample">
   <% UserCharacteristic::CATEGORIES.each_with_index do |category, index| %>
     <div class="card">
       <div class="card-header" id="heading<%= index %>">
         <h2 class="mb-0">
           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-<%= index %>" aria-expanded="false" aria-controls="collapse-<%= index %>">
+            <i class="far fa-futbol"></i>
+            <!-- <i class="fas fa-comment-alt fa-2x p-3 mr-4 float-left black-text" aria-hidden="true"></i> -->
             <%= category %>
           </button>
         </h2>
@@ -27,8 +30,17 @@
     </div>
   <% end %>
 </div>
-
+<!-- input decsribe yourself -->
+<div class="form-group  mt-3" >
+  <div class="ml-3">
+    <label for="exampleFormControlTextarea1">Describe yourself...</label>
+  </div>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+<!-- button pink -->
 <button class=" button btn-pink">Almost there...</button>
+
+
 
 
 
