--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -30,7 +30,7 @@
       </div>
 
       <div class="form-actions">
-        <h5><%= f.button :submit, "Update Preferences", class: 'btn btn-pink'%><h5>
+        <h5><%= link_to "Update Preferences", user_path, class: 'btn btn-pink'%><h5>
       </div>
       <% end %>
 
