--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,10 @@
-<div class="card m-5" style="width: 24rem;">
+<div class="card w-100">
 
 <p> <%= cl_image_tag @user.photo, height: 425, width: 344, crop: :fill, class: "card-img-top" %></p>
 <div class="card-body">
    <h3> <%= @user.first_name %> </h3>
    <p> next <%= @next_user.email %> </p>
+
 
   <div class="d-flex justify-content-between mx-5">
     <div>
