--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
       <% end %>
     </div>
     <div>
-      <%= link_to user_path(@next_user) do %>
+      <%= link_to user_matches_path(@user), method: :post do %>
         <i class="fas fa-heart"></i>
       <% end %>
     </div>
