--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,10 @@
 
 <p> <%= cl_image_tag @user.photo, height: 425, width: 344, crop: :fill, class: "card-img-top" %></p>
 <div class="card-body">
+
    <h3> <%= @user.first_name %> </h3>
-   <p> next <%= @next_user.email %> </p>
+
+   <!-- <p> next <%#= @next_user.email %> </p> -->
 
   <div class="d-flex justify-content-between mx-5">
     <div>
@@ -12,8 +14,14 @@
       <% end %>
     </div>
     <div>
-      <%= link_to user_path(@next_user) do %>
-        <i class="fas fa-heart"></i>
+      <% if @next_user.empty? %>
+        <%= link_to root_path do %>
+          <i class="fas fa-heart"></i>
+        <% end %>
+      <% else %>
+        <%= link_to user_path(@next_user) do %>
+          <i class="fas fa-heart"></i>
+        <% end %>
       <% end %>
     </div>
   </div>
