FIX: minor fixes to user registration and profile edit options

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -44,7 +44,7 @@
         <%= f.input :birthday,
         required: true,
         autofocus: true,
-        input_html: { autocomplete: "email" }%>
+        input_html: { autocomplete: "birthday" }%>
       </div>
 
       <div class="form-actions mt-5">
