--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -2,13 +2,13 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
-    <h2>Update <%= @user.first_name %>s Preferences</h2>
+    <h2><%= @user.first_name %>s Match Preferences</h2>
 
     <%= simple_form_for @user, url: profile_path, method: :patch do |f| %>
     <%= f.error_notification %>
 
       <div class="form-inputs">
-        <%= f.input :diagnosis_year, placeholder: '2008', input_html: { min: '1950', step: 'any', max: 'Date.today.year' } %>
+        <%= f.input :diagnosis_year, placeholder: 'Diagnosed Before', input_html: { min: '1950', step: 'any', max: 'Date.today.year' } %>
         <%= f.input :sex_pref, required: true, autofocus: true, collection: ["Male", "Female", "Non-binary"]%>
         <div class="row">
           <div class="col">
@@ -21,16 +21,17 @@
 
         <div class="row">
           <div class="col">
-            <label class="select required" for="profiles_distance">Distance <abbr title="required">*</abbr></label>
+            <label class="select required" for="profiles_distance">Distance<abbr title="required">*</abbr></label>
           </div>
           <div class="col">
             <input type="range" name="profiles[distance]" class="multi-range" id="distanceInputId" value="5" min="1" max="100" oninput="distanceOutputId.value = distanceInputId.value">
             <output name="distanceOutputName" id="distanceOutputId"></output>
           </div>
         </div>
+        <br>
 
       <div class="form-actions">
-        <h5><%= f.submit 'update', class: 'btn btn-pink'%><h5>
+        <h5><%= f.submit 'Update Preferences', class: 'btn btn-pink w-100'%><h5>
       </div>
 
 
