--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,54 @@
-<div class="card w-100">
+<div class="card-matching">
 
-<p> <%= cl_image_tag @user.photo, height: 425, width: 344, crop: :fill, class: "card-img-top" %></p>
-<div class="card-body">
-   <h3> <%= @user.first_name %> </h3>
-   <p> next <%= @next_user.email %> </p>
-
-
-  <div class="d-flex justify-content-between mx-5">
+  <%= cl_image_tag @user.photo, height: 425, width: 344, crop: :fill, class: "card-img-top" %>
+  <div class="card-infos-users">
     <div>
-      <%= link_to user_path(@next_user) do %>
-        <i class="fas fa-times"></i>
-      <% end %>
+      <h4> <%= @user.username %></h4>
+      <h5><%= @user.city %></h5>
     </div>
-    <div>
-      <%= link_to user_path(@next_user) do %>
-        <i class="fas fa-heart"></i>
-      <% end %>
-    </div>
+    <h5 class="card-infos-users-age"> <%= @user.age  %>y.o</h5>
   </div>
-</div>
 
 </div>
+    <div class="row ml-1 mr-1 justify-content-evenly" style="justify-content: space-evenly;">
+      <div class="btn btn-pill active col-3 m-1">
+        funny
+      </div>
+      <div class="btn btn-pill active col-3 m-1">
+        hockey
+      </div>
+      <div class="btn btn-pill active col-3 m-1">
+        loving
+      </div>
+      <div class="btn btn-pill active col-3 m-1">
+        cheerful
+      </div>
+      <div class="btn btn-pill active col-3 m-1">
+        bubbly
+      </div>
+      <div class="btn btn-pill active col-3 m-1">
+        art
+      </div>
+      <div class="btn btn-pill active col-3 m-1">
+        travel
+      </div>
+      <div class="btn btn-pill active col-3 m-1">
+        hip hop
+      </div>
+      <div class="btn btn-pill active col-3 m-1">
+        soul
+      </div>
+    </div>
+      <!-- this is the heart and cross -->
+    <div class="d-flex justify-content-center mx-5">
+      <div>
+        <%= link_to user_path(@next_user) do %>
+          <i class="fas fa-times m-5"></i>
+        <% end %>
+      </div>
+      <div>
+        <%= link_to user_path(@next_user) do %>
+          <i class="fas fa-heart m-5"></i>
+        <% end %>
+      </div>
+    </div>
