UPDATE: Changed Input Labels

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -8,8 +8,8 @@
     <%= f.error_notification %>
 
       <div class="form-inputs">
-        <%= f.input :diagnosis_year, placeholder: '2008', input_html: { min: '1950', step: 'any', max: 'Date.today.year' } %>
-        <%= f.input :sex_pref, required: true, autofocus: true, collection: ["Male", "Female", "Non-binary"]%>
+        <%= f.input :diagnosis_year, label: 'Living HIV+ Since:', placeholder: '2008', input_html: { min: '1950', step: 'any', max: 'Date.today.year' } %>
+        <%= f.input :sex_pref, label: 'Match with:', required: true, autofocus: true, collection: ["Male", "Female", "Non-binary"]%>
         <div class="row">
           <div class="col">
             <%= f.input :min_age, collection: 18..90%>
