--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,30 +11,30 @@
       <%= f.input :photo %>
       <%= f.input :photo_cache, as: :hidden %>
       <%= f.input :email, required: true, autofocus: true %>
-      <div class="form-inputs form-inline">
-      <%= f.input :first_name, required: true, autofocus: true, input_html: { autocomplete: "first_name" }%>
-      <%= f.input :last_name, required: true, autofocus: true, input_html: { autocomplete: "last_name" }%>
+      <div class="row">
+        <div class="col">
+          <%= f.input :first_name, required: true, autofocus: true, input_html: { autocomplete: "first_name" }%>
+        </div>
+        <div class="col">
+          <%= f.input :last_name, required: true, autofocus: true, input_html: { autocomplete: "last_name" }%>
+        </div>
       </div>
       <%= f.input :city, required: true, autofocus: true, input_html: { autocomplete: "city" }%>
       <%= f.input :username, required: true, autofocus: true, input_html: { autocomplete: "email" }%>
       <%= f.input :gender, required: true, autofocus: true, collection: ["Male", "Female", "Non-binary"]%>
-      <%= f.input :birthday, required: true, autofocus: true, input_html: { autocomplete: "birthday" }%>
+      <%#= f.input :birthday, required: true, autofocus: true, input_html: { autocomplete: "birthday" }%>
+      <%= f.input :birthday, as: :date, start_year: Date.today.year - 91, end_year: Date.today.year - 70, discard_day: true, order: [:month, :year], required: true %>
+      <%#= f.input :birthday, as: :date, start_year: '1950', end_year: '2019', discard_day: true, order: [:month, :year], required: true %>
+
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
       <% end %>
 
       <%= f.input :password,
-      hint: "leave it blank if you don't want to change it",
-      required: false,
-      input_html: { autocomplete: "new-password" } %>
-      <%= f.input :password_confirmation,
-      required: false,
-      input_html: { autocomplete: "new-password" } %>
-      <%= f.input :current_password,
-      hint: "we need your current password to confirm your changes",
-      required: true,
-      input_html: { autocomplete: "current-password" } %>
+      hint: "leave it blank if you don't want to change it", required: false, input_html: { autocomplete: "new-password" } %>
+      <%= f.input :password_confirmation, required: false, input_html: { autocomplete: "new-password" } %>
+      <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true, input_html: { autocomplete: "current-password" } %>
     </div>
 
     <div class="form-actions">
