--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,41 +10,23 @@
       <div class="form-inputs">
         <%= f.input :photo %>
         <%= f.input :photo_cache, as: :hidden %>
-        <%= f.input :first_name,
-        required: true,
-        autofocus: true,
-        input_html: { autocomplete: "first_name" }%>
-        <%= f.input :last_name,
-        required: true,
-        autofocus: true,
-        input_html: { autocomplete: "last_name" }%>
-        <%= f.input :city,
-        required: true,
-        autofocus: true,
-        input_html: { autocomplete: "city" }%>
-        <%= f.input :username,
-        required: true,
-        autofocus: true,
-        input_html: { autocomplete: "username" }%>
-        <%= f.input :email,
-        required: true,
-        autofocus: true,
-        input_html: { autocomplete: "email" }%>
-        <%= f.input :password,
-        required: true,
-        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-        input_html: { autocomplete: "new-password" } %>
-        <%= f.input :password_confirmation,
-        required: true,
-        input_html: { autocomplete: "new-password" } %>
-        <%= f.input :gender,
-        required: true,
-        autofocus: true,
-        collection: ["Male", "Female", "Non-binary"]%>
-        <%= f.input :birthday,
-        required: true,
-        autofocus: true,
-        input_html: { autocomplete: "email" }%>
+        <div class="row">
+          <div class="col">
+            <%= f.input :first_name, required: true, autofocus: true, input_html: { autocomplete: "first_name" }%>
+          </div>
+          <div class="col">
+            <%= f.input :last_name, required: true, autofocus: true, input_html: { autocomplete: "last_name" }%>
+          </div>
+        <%= f.input :city, required: true, autofocus: true, input_html: { autocomplete: "city" }%>
+        <%= f.input :username, required: true, autofocus: true, input_html: { autocomplete: "username" }%>
+        <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" }%>
+        <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" } %>
+        <%= f.input :gender, required: true, autofocus: true, collection: ["Male", "Female", "Non-binary"]%>
+        <div class="row">
+          <%#= f.input :birthday, as: :date, start_year: Date.today.year - 90, end_year: Date.today.year - 70, discard_day: true, order: [:month, :year], required: true %>
+          <%= f.input :birthday, as: :date, start_year: '1950', end_year: '2019', discard_day: true, order: [:month, :year], required: true %>
+        </div>
       </div>
 
       <div class="form-actions mt-5">
