--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -52,5 +52,9 @@ p {
   font-size: 12px;
 }
 
-
+h3.black-profile-header {
+  font-size: 24px !important;
+  font-weight: bold !important;
+  color: black;
+}
 
