--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -26,6 +26,13 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
 
+.avatar-x-large {
+  width: 200px;
+  height: 200px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border-radius: 50%;
+}
+
 // .avatar-xxs {
   // width: 20px;
   // height: 20px;
