UPDATE: Increased Year Range for Birthday

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,10 +23,7 @@
         <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password" } %>
         <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" } %>
         <%= f.input :gender, required: true, autofocus: true, collection: ["Male", "Female", "Non-binary"]%>
-        <div class="row">
-          <%#= f.input :birthday, as: :date, start_year: Date.today.year - 90, end_year: Date.today.year - 70, discard_day: true, order: [:month, :year], required: true %>
-          <%= f.input :birthday, as: :date, start_year: '1950', end_year: '2019', discard_day: true, order: [:month, :year], required: true %>
-        </div>
+        <%= f.input :birthday, as: :date, start_year: Date.today.year - 87, end_year: Date.today.year - 5, order: [:day, :month, :year], required: true %>
       </div>
 
       <div class="form-actions mt-5">
