--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,12 +19,10 @@
           <%= f.input :last_name, required: true, autofocus: true, input_html: { autocomplete: "last_name" }%>
         </div>
       </div>
-      <%= f.input :city, required: true, autofocus: true, input_html: { autocomplete: "city" }%>
       <%= f.input :username, required: true, autofocus: true, input_html: { autocomplete: "email" }%>
+      <%= f.input :city, required: true, autofocus: true, input_html: { autocomplete: "city" }%>
       <%= f.input :gender, required: true, autofocus: true, collection: ["Male", "Female", "Non-binary"]%>
-      <%#= f.input :birthday, required: true, autofocus: true, input_html: { autocomplete: "birthday" }%>
-      <%= f.input :birthday, as: :date, start_year: Date.today.year - 91, end_year: Date.today.year - 70, discard_day: true, order: [:month, :year], required: true %>
-      <%#= f.input :birthday, as: :date, start_year: '1950', end_year: '2019', discard_day: true, order: [:month, :year], required: true %>
+      <%= f.input :birthday, as: :date, start_year: Date.today.year - 87, end_year: Date.today.year - 5, order: [:day, :month, :year], required: true %>
 
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
