Adding color to pills text

--- a/app/assets/stylesheets/components/_pill.scss
+++ b/app/assets/stylesheets/components/_pill.scss
@@ -4,12 +4,20 @@
   border-radius: 27px;
   min-width: 60px;
   max-width: 150px;
+  color: #122C7E;
+
 
   &.active{
     background-color: #132D7E;
     color: white;
+
   }
 }
+
+.btn-hover {
+  color: #122C7E !important;
+}
+
 
 #pill-ghost {
   color: #132D7E;
@@ -22,3 +30,4 @@
 .fa-user,.fa-thumbs-up,.fa-music,.fa-futbol {
   color: #122C7E;
 }
+
