--- a/app/views/user_characteristics/new.html.erb
+++ b/app/views/user_characteristics/new.html.erb
@@ -50,7 +50,7 @@
   </div>
     <textarea id="form7" class="md-textarea form-control" rows="3"></textarea>
 </div>
-<%= link_to "Almost there...", edit_profile_path(current_user), class: 'button btn-pink w-100' %>
+<%= link_to "Almost there...", edit_profile_path(current_user), class: 'button btn btn-pink w-100' %>
 
 
 
