VIEW: Updates to _Fonts and New Registration page. Added Profile picture Icon

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -30,6 +30,16 @@ h2 {
   color: $hivie-pink;
 }
 
+// REGISTER HEADERS BLUE
+h3.blue-profile-header {
+  font-size: 32px !important;
+  font-weight: bold !important;
+  color: $hivie-blue;
+  margin-top: 3px;
+  margin-bottom: 13px;
+  text-align: center;
+}
+
 // Sub-Header Bold
 h3 {
   font-size: 24px !important;
