--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -25,3 +25,7 @@
   border-radius: 3px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
+
+.form-inputs.focus {
+  border-color: $hivie-pink !important;
+}
