--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
-    <h3 style="text-align: center;"><%= @user.first_name %>s Match Preferences</h3>
+    <h3 class="blue-profile-header" style="text-align: center;"><%= @user.first_name %>s Match Preferences</h3>
 
     <%= simple_form_for @user, url: profile_path, method: :patch do |f| %>
     <%= f.error_notification %>
