--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,9 +8,12 @@
       <%= f.error_notification %>
 
       <div class="form-inputs">
-        <i class="fas fa-user-circle fa-5x justify-content-center" style="color: #132D7E"></i>
-        <%= f.input :photo, label: "Profile Picture" %>
-        <%= f.input :photo_cache, as: :hidden %>
+        <div class="photo-upload text-center">
+          <i class="fas fa-user-circle fa-5x" style="color: #132D7E"></i>
+          <%= f.input :photo, label: "Profile Picture" %>
+          <%= f.input :photo_cache, as: :hidden %>
+          <p style="opacity: 0.6">*Don’t worry, we’ll keep your photo anoymous for now</p>
+        </div>
         <div class="row">
           <div class="col">
             <%= f.input :first_name, required: true, autofocus: true, input_html: { autocomplete: "first_name" }%>
