adjusting the pills in the component

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -17,9 +17,16 @@
   // position: absolute;
 }
 
-// .card-img-top {
-//   background: linear-gradient(to top, black, 80%, white);
-// }
+.card-img-top {
+  background: linear-gradient(to top, black, 80%, black) !important;
+}
 // .regular-progression {
 
+// }
+
+// .gradient-img-match {
+//   background-image:
+//     linear-gradient(
+//       red, #f06d06
+//     );
 // }
