--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Edit Account", edit_user_registration_path, class: "dropdown-item" %>
-            <%= link_to "Update Interests", user_path(current_user), class: "dropdown-item" %>
+            <%= link_to "Update Interests", user_characteristic_path(current_user), class: "dropdown-item" %>
             <%= link_to "Update Preferences", edit_profile_path(current_user), class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
